# imbibo

./: .gitignore  Example.ipynb  MANIFEST.in  README.md  setup.cfg
imbibo/: __init__.py  __main__.py  general.py  liquids.py  pores.py  temperature.py
tests/: test_imbibo.py
