[metadata]
name = imbibo
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://github.com/ovinc/imbibo
description = Imbibition of water in nanoporous media
long_description = file: README.md
long_description_content_type = text/markdown
keywords = imbibition, Lucas, Washburn, capillarity
license_files = LICENSE
license = CeCILL-B
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    License :: CeCILL-B Free Software License Agreement (CECILL-B)

[options]
include_package_data = True
packages = find:
install_requires =
    importlib-metadata
    aquasol
    helisol
setup_requires =
    setuptools_scm
python_requires =
    >=3.7
